--- a/groupmaker-23/package.json
+++ b/groupmaker-23/package.json
@@ -42,5 +42,5 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   },
-  "homepage": "https://evanweinberg.com/group-maker/"
+  "homepage": "https:/evanweinberg.com/groupmaker/"
 }
